# spt

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
gui/: Cargo.toml
gui/src/: lib.rs  main.rs
gui/ui/: main.slint  timeline.slint  user.slint
src/: domain.rs  eventstore.rs  lib.rs  login.rs  main.rs  types.rs
src/eventsourcing/: domain.rs  eventstore.rs  mod.rs  prelude.rs  uevents.rs
