[package]
name = "spt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rspotify = { version = "0.11.6", default-features = false, features = ["cli", "client-ureq", "ureq-rustls-tls"] }
serde = "1.0.151"
serde_json = "1.0.91"
tokio = {version = "1.23.0", features=["rt","macros","rt-multi-thread"]}
